[tool.poetry]
name = "keystone-client"
version = "0.0.0"
description = "Python client for the Keystone API"
authors = ["djperrefort <djperrefort@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
